src/test/ui/chalkify/lower_env1.stderr
error: program clause dump
  --> $DIR/lower_env1.rs:6:1
   |
LL | #[rustc_dump_program_clauses]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: forall<Self> { FromEnv(Self: Foo) :- FromEnv(Self: Bar). }
   = note: forall<Self> { Implemented(Self: Bar) :- FromEnv(Self: Bar). }
   = note: forall<Self> { WellFormed(Self: Bar) :- Implemented(Self: Bar), WellFormed(Self: Foo). }

error: program clause dump
  --> $DIR/lower_env1.rs:9:1
   |
LL | #[rustc_dump_env_program_clauses]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: forall<Self> { FromEnv(Self: Foo) :- FromEnv(Self: Bar). }
   = note: forall<Self> { Implemented(Self: Bar) :- FromEnv(Self: Bar). }
   = note: forall<Self> { Implemented(Self: Foo) :- FromEnv(Self: Foo). }

error: aborting due to 2 previous errors

